--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
+    "name": "openedubox/openedubox",
     "type": "project",
-    "license": "proprietary",
+    "license": "MIT",
+    "description": "School management system",
     "require": {
         "php": "^7.1.3",
         "ext-ctype": "*",
